k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: schwab-ingress
  namespace: app-primary
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - host: yourapp.example.com
      http:
        paths:
          - path: /app-a
            pathType: Prefix
            backend: { service: { name: web-app-a, port: { number: 80 } } }
          - path: /app-b
            pathType: Prefix
            backend: { service: { name: web-app-b, port: { number: 80 } } }
